--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.beetle-psx"
 		name="PlayStation (Beetle PSX)"
-		version="0.9.39"
+		version="0.9.44"
 		provider-name="Libretro">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -10,17 +10,17 @@
 	<extension point="kodi.gameclient"
 			library_@PLATFORM@="@LIBRARY_FILENAME@">
 		<platforms>PSX</platforms>
-		<extensions>exe|cue|toc|ccd|m3u|pbp</extensions>
+		<extensions>exe|cue|toc|ccd|m3u|pbp|chd</extensions>
 		<supports_vfs>false</supports_vfs>
 		<supports_standalone>false</supports_standalone>
 		<supports_keyboard>false</supports_keyboard>
 		<supports_mouse>false</supports_mouse>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en">PlayStation (Beetle PSX) 0.9.39.2</summary>
+		<summary lang="en">PlayStation (Beetle PSX) 0.9.44.1</summary>
 		<description>Beetle PSX is the PlayStation module of Beetle, a port of Madnafen
 
-Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp</description>
+Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 		<license>GPLv2</license>
 		<platform>@PLATFORM@</platform>
 		<assets>
