Import topology and buttonmap
Data comes from Beetle-PSX source:

https://github.com/libretro/beetle-psx-libretro/blob/master/input.cpp

--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -5,7 +5,14 @@
 		provider-name="Libretro">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
-		<import addon="game.controller.ps" version="1.0.0"/>
+		<import addon="game.controller.ps.gamepad" version="1.0.0"/>
+		<import addon="game.controller.ps.dualshock" version="1.0.0"/>
+		<import addon="game.controller.ps.dualanalog" version="1.0.0"/>
+		<import addon="game.controller.ps.guncon.western" version="1.0.0"/>
+		<import addon="game.controller.ps.guncon.japan" version="1.0.0"/>
+		<import addon="game.controller.ps.konami.justifier.ps" version="1.0.0"/>
+		<import addon="game.controller.ps.mouse" version="1.0.0"/>
+		<import addon="game.controller.ps.multitap" version="1.0.0"/>
 	</requires>
 	<extension point="kodi.gameclient"
 			library_@PLATFORM@="@LIBRARY_FILENAME@">
@@ -18,7 +25,7 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
-		<description>Beetle PSX is the PlayStation module of Beetle, a port of Madnafen
+		<description>Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.
 
 Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 		<license>GPLv2</license>
