--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -22,8 +22,8 @@
 		<supports_standalone>false</supports_standalone>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
-		<description>Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.
+		<summary lang="en_GB">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
+		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.
 
 Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 		<license>GPLv2</license>
