Updated by kodi-game-scripting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ set(BEETLE-PSX_CUSTOM_BINARY ${BEETLE-PSX_LIB}
     ${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
 
 build_addon(${PROJECT_NAME} BEETLE-PSX "")
+
+include(CPack)
