--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -10,7 +10,7 @@
 		<import addon="game.controller.ps.dualanalog" version="1.0.0"/>
 		<import addon="game.controller.ps.guncon.western" version="1.0.0"/>
 		<import addon="game.controller.ps.guncon.japan" version="1.0.0"/>
-		<import addon="game.controller.ps.konami.justifier.ps" version="1.0.0"/>
+		<import addon="game.controller.konami.justifier.ps" version="1.0.0"/>
 		<import addon="game.controller.ps.mouse" version="1.0.0"/>
 		<import addon="game.controller.ps.multitap" version="1.0.0"/>
 	</requires>
