--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: wsnipex <wsnipex@a1.net>
 Build-Depends: debhelper (>= 9.0.0),
                cmake,
                kodi-addon-dev,
-               beetle-psx (>= 0.9.44)
+               libretro-beetle-psx (>= 0.9.44) | beetle-psx (>= 0.9.44)
 Standards-Version: 3.9.8
 Section: libs
 
