--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -22,17 +22,13 @@
 		<supports_standalone>false</supports_standalone>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-
-Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 		<license>GPLv2</license>
 		<platform>@PLATFORM@</platform>
 		<source>https://github.com/kodi-game/game.libretro.beetle-psx</source>
 		<assets>
 			<icon>resources/icon.png</icon>
 		</assets>
-
-Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 		<summary lang="en_GB">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
-		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
+		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.[CR][CR]Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
 	</extension>
 </addon>
