--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -29,6 +29,6 @@
 			<icon>resources/icon.png</icon>
 		</assets>
 		<summary lang="en_GB">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
-		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.[CR][CR]Supported files: .exe, .cue, .toc, .ccd, .m3u, .pbp, .chd</description>
+		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.</description>
 	</extension>
 </addon>
