--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.beetle-psx"
 		name="Sony - PlayStation (Beetle PSX)"
-		version="0.9.44.45"
+		version="0.9.44.46"
 		provider-name="Mednafen Team">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -29,7 +29,7 @@
 		<assets>
 			<icon>resources/icon.png</icon>
 		</assets>
-		<summary lang="en_GB">Sony - PlayStation (Beetle PSX) 0.9.44.1</summary>
+		<summary lang="en_GB">Sony - PlayStation (Beetle PSX)</summary>
 		<description lang="da_DK">Beetle PSX er PlayStation-modulet i Beetle, en port af Mednafen.</description>
 		<description lang="de_DE">Beetle PSX ist das PlayStation-Modul von Beetle, einer Portierung von Madnafen.</description>
 		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.</description>
