--- a/game.libretro.beetle-psx/addon.xml.in
+++ b/game.libretro.beetle-psx/addon.xml.in
@@ -31,11 +31,11 @@
 		</assets>
 		<summary lang="en_GB">Sony - PlayStation (Beetle PSX)</summary>
 		<description lang="da_DK">Beetle PSX er PlayStation-modulet i Beetle, en port af Mednafen.</description>
-		<description lang="de_DE">[CR]Beetle PSX ist das PlayStation-Modul von Beetle, einer Portierung von [CR]Madnafen.</description>
+		<description lang="de_DE">Beetle PSX ist das PlayStation-Modul von Beetle, einer Portierung von Madnafen.</description>
 		<description lang="en_GB">Beetle PSX is the PlayStation module of Beetle, a port of Madnafen.</description>
-		<description lang="es_ES">[CR]Beetle PSX es el módulo para PlayStation de Beetle, una adaptación de [CR]Mednafen.</description>
-		<description lang="fi_FI">[CR]Beetle PSX on Mednafenin Beetlestä kehittämän PlayStation-moduulin [CR]käännösversio.</description>
-		<description lang="ru_RU">[CR]Beetle PSX — это модуль Playstation для Kodi | Форк PSX модуля Beetle для [CR]эмулятора Mednafen.</description>
+		<description lang="es_ES">Beetle PSX es el módulo para PlayStation de Beetle, una adaptación de Mednafen.</description>
+		<description lang="fi_FI">Beetle PSX on Mednafenin Beetlestä kehittämän PlayStation-moduulin käännösversio.</description>
+		<description lang="ru_RU">Beetle PSX — это модуль Playstation для Kodi | Форк PSX модуля Beetle для эмулятора Mednafen.</description>
 		<description lang="zh_CN">Beetle PSX 是 PlayStation 的 Beetle 模块，是 Madnafen 的移植。</description>
 	</extension>
 </addon>
