Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/.github/workflows/sync-addon-metadata-translations.yml
+++ b/.github/workflows/sync-addon-metadata-translations.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   default:
-    if: github.repository == 'kodi-game/game.libretro.beetle-psx'
+    if: github.repository == 'kodi-game/game.libretro.beetle-psx-hw'
     runs-on: ubuntu-latest
 
     steps:
