--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(game.libretro.beetle-psx)
+project(game.libretro.beetle-psx-hw)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
@@ -11,14 +11,14 @@ if(CMAKE_SYSTEM_NAME STREQUAL Windows)
   set(_CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_FIND_LIBRARY_SUFFIXES})
   set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_SHARED_LIBRARY_SUFFIX})
 endif()
-find_library(BEETLE-PSX_LIB NAMES mednafen_psx_libretro${CMAKE_SHARED_LIBRARY_SUFFIX} PATH_SUFFIXES libretro)
+find_library(BEETLE-PSX-HW_LIB NAMES mednafen_psx_hw_libretro${CMAKE_SHARED_LIBRARY_SUFFIX} PATH_SUFFIXES libretro)
 if(CMAKE_SYSTEM_NAME STREQUAL Windows)
   set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CMAKE_FIND_LIBRARY_SUFFIXES})
 endif()
 
-set(BEETLE-PSX_CUSTOM_BINARY ${BEETLE-PSX_LIB}
+set(BEETLE-PSX-HW_CUSTOM_BINARY ${BEETLE-PSX-HW_LIB}
     ${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
 
-build_addon(${PROJECT_NAME} BEETLE-PSX "")
+build_addon(${PROJECT_NAME} BEETLE-PSX-HW "")
 
 include(CPack)
